<resources>
    <string name="app_name">交大帮</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="unlogin">忘记密码?</string>
    <string name="register">注册新用户</string>
    <string name="back_exit">再按一次退出程序</string>
    <string name="reset_password">重置密码</string>
    <string name="setting_exit">退出登录</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_about_content">\t\t\t\t交大帮由为你解邮科技服务有限公司运营。是属于BJTUers的公众平台。
        我们是快递最后一公里的专家，将您的快递精确实时的送到您指定的校园地点内。我们更是您生活的小帮手，通过共享，提升单位时间的价值。</string>
    <string name="setting_about_feedback">意见反馈</string>
    <string name="setting_about_feedback_success">发送成功</string>
    <string name="setting_about_feedback_hint">说点儿什么吧......</string>
    <string name="setting_about_update">版本更新</string>
    <string name="setting_about_copyright">Copyright © 2017</string>
    <string name="setting_account">帐户与安全</string>
    <string name="setting_account_phone">更换手机号码</string>
    <string name="setting_account_pwd">修改密码</string>
    <string name="setting_change_pay_pwd">修改支付密码</string>
    <string name="setting_set_pay_pwd">设置支付密码</string>
    <string name="setting_pay_pwd">支付密码</string>
    <string name="setting_msg">新消息提醒</string>
    <string name="setting_cache">清理缓存文件</string>
    <string name="setting">设置</string>
    <string name="setting_notice">接受新消息通知</string>
    <string name="setting_voice">声音</string>
    <string name="setting_shake">震动</string>
    <string name="setting_notice_des">若关闭，当收到新消息时，将不会通知</string>
    <string name="setting_cache_clear">确定要清除缓存吗？</string>
    <string name="setting_exit_content">确定要退出登录吗？</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="nickname_change_des">好名字可以让你的朋友更容易记住你。</string>
    <string name="school_change_des">请填写正确的学校名称，说不定还可以找到校友哦。</string>
    <string name="nickname_change">更改名字</string>
    <string name="school_change">更改学校</string>
    <string name="phone">手机号</string>
    <string name="sex">性别</string>
    <string name="school">学校</string>
    <string name="my_address">我的常用地址</string>
    <string name="more">更多</string>
    <string name="pwd_original">原密码</string>
    <string name="pwd_original_hint">请输入原密码</string>
    <string name="pwd_new">新密码</string>
    <string name="pwd_new_ok">新密码确认</string>
    <string name="change">修改</string>
    <string name="register_submit">注册</string>
    <string name="register_phone">请输入您的手机号码</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_pwd_ok">请再次输入密码</string>
    <string name="register_pwd_warn">两次密码输入不一致</string>
    <string name="register_code">请输入您收到的验证码</string>
    <string name="register_code_fetch">点击获取验证码</string>
    <string name="register_code_fetched">%1$s秒后重新发送</string>
    <string name="register_code_again">重新获取验证码</string>
    <string name="phone_error">请输入正确的手机号码</string>
    <string name="register_success">注册成功</string>
    <string name="error_net_fail">网络连接失败</string>
    <string name="error_net_parse">解析异常</string>
    <string name="error_network_is_not_available">网络不可用</string>
    <string name="error_net_timeout">网络超时</string>
    <string name="error_inner_error">网络错误</string>
    <string name="tab_home">首页</string>
    <string name="tab_person">个人中心</string>
    <string name="tab_msg">消息</string>
    <string name="tab_release">发布求助</string>
    <string name="tab_assist">顺手帮忙</string>
    <string name="list_loading">正在加载...</string>
    <string name="list_fail">加载失败，上拉重新加载</string>
    <string name="list_empty">暂无更多数据</string>
    <string name="release">发布求助</string>
    <string name="release_progress">正在进行</string>
    <string name="release_complete">已完成</string>
    <string name="release_state">求助内容</string>
    <string name="release_from">求助定位</string>
    <string name="release_from_address">详细地址</string>
    <string name="release_money">薪酬金额</string>
    <string name="release_money_warn">金额最小单位为角</string>
    <string name="yuan">元</string>
    <string name="release_send">送达地址</string>
    <string name="release_send_address">详细地址</string>
    <string name="release_remark">备注信息</string>
    <string name="release_remark_content">可以填写一些信息，比如快递单号等。</string>
    <string name="input_point">请输入地址</string>
    <string name="select_point">选择地址</string>
    <string name="select_point_click">点击选择地址</string>
    <string name="help">帮我</string>
    <string name="release_submit">发单</string>
    <string name="accept">接单</string>
    <string name="release_state_release">已发布</string>
    <string name="release_state_progress">已接单</string>
    <string name="release_state_arrive">进行中</string>
    <string name="release_state_complete">已完成</string>
    <string name="release_state_evaluation">评价</string>
    <string name="release_state_evaluated">已评价</string>
    <string name="release_state_change">修改</string>
    <string name="change_success">修改成功</string>
    <string name="release_state_ok">确认收货</string>
    <string name="release_state_ok_confirm">确认收获后，钱将支付给接单者。</string>
    <string name="release_free">免费为你解邮</string>
    <string name="accept_ok">确定接收此单？</string>
    <string name="accept_success">我知道了，马上就去</string>
    <string name="accept_remark">接单成功后可在个人中心接单页面看到备注信息</string>
    <string name="accept_id">您还未完成在校师生认证，认证后才可以接单</string>
    <string name="accept_count">目前共有%1$s单正在发布</string>
    <string name="accept_warn">温馨提示</string>
    <string name="accept_warn_content">告诉您一个小秘密，双指在地图上下划或者上划可以切换3D地图和2D地图哦。</string>
    <string name="know">知道了</string>
    <string name="evaluation">整体评分</string>
    <string name="evaluation_hint">填写您的评价</string>
    <string name="evaluation_ok">确认评价</string>
    <string name="home_seek">人帮我</string>
    <string name="home_help">我帮人</string>
    <string name="home_express">为你解邮</string>
    <string name="home_express_count">您有%1$s个快递已经到达学校</string>
    <string name="home_express_send">免费派送</string>
    <string name="home_express_more">查看更多</string>
    <string name="home_news">热点资讯</string>
    <string name="express_my">我的快递</string>
    <string name="send_des">您的快递已经到达</string>
    <string name="send_site">交大帮自提点</string>
    <string name="send_address">请填写最后一公里详细地址</string>
    <string name="send_choose_address">选择地址</string>
    <string name="address_hint">请填写详细地址</string>
    <string name="person_release_order">发布的订单</string>
    <string name="person_assist_order">帮助的订单</string>
    <string name="order_info">订单详情</string>
    <string name="person_check">查看全部</string>
    <string name="person_all_order">全部</string>
    <string name="person_release">已发布</string>
    <string name="person_accept">已被接单</string>
    <string name="person_progress">已接单</string>
    <string name="person_complete">已完成</string>
    <string name="person_evaluation">待评价</string>
    <string name="person_refund">退款</string>
    <string name="person_assist">我帮助</string>
    <string name="person_coupons">优惠券</string>
    <string name="person_identification">在校师生认证</string>
    <string name="person_public">我的公益</string>
    <string name="person_wallet">我的钱包</string>
    <string name="app_delay">暂缓开通</string>
    <string name="money_amount">帐户余额</string>
    <string name="money_withdraw">提现</string>
    <string name="money_withdraw_warn">可提现金额：%1$s，提现成功后24小时内到账</string>
    <string name="money_withdraw_amount">提现金额</string>
    <string name="money_withdraw_amount_hint">请输入提现金额</string>
    <string name="money_block">冻结金额</string>
    <string name="money_withdraw_success">提现成功</string>
    <string name="money_withdraw_error">金额超限</string>
    <string name="download">下载</string>
    <string name="download_loading">正在下载</string>
    <string name="download_success">下载完成</string>
    <string name="version_update">发现新版本</string>
    <string name="version_no">已经是最新版本</string>
    <string name="identification">在校师生认证</string>
    <string name="identification_content">注意：点击认证后，请登录交大学生/教师邮箱点击链接确认。</string>
    <string name="id_name">请输入姓名</string>
    <string name="id_sno">请输入学工号</string>
    <string name="id_grade">请选择年级</string>
    <string name="id_specialty">请选择专业</string>
    <string name="id_photo">*上传拿一卡通的自拍</string>
    <string name="upload">上传</string>
    <string name="reupload">重新上传</string>
    <string name="approve">认证</string>
    <string name="approved">已认证</string>
    <string name="identification_toast">邮箱认证完成后，再点我已认证确认</string>
    <string name="identification_email">我已邮箱认证</string>
    <string name="identification_warn">如果已经邮箱确认，请稍后再点</string>
    <string name="wallet">我的钱包</string>
    <string name="ok">确定</string>
    <string name="photo_preview">预览</string>
    <string name="photo_choose">选择</string>
    <string name="camera_error">拍照失败</string>
    <string name="photo_max">最多只能选择%1$s张照片</string>
    <string name="pay_amount">金额</string>
    <string name="pay_balance">余额</string>
    <string name="pay_ali">支付宝</string>
    <string name="pay_ali_content">推荐支付宝用户使用</string>
    <string name="pay">支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_wx_content">推荐微信用户使用</string>
    <string name="pay_result">支付结果</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败，请重新支付</string>
    <string name="pay_history">账单记录</string>
    <string name="pay_approve">认证</string>
    <string name="name">姓\t\t名</string>
    <string name="zfb">支付宝</string>
    <string name="zfb_input">请输入支付宝</string>
    <string name="pay_pwd_original_input">请输入原始支付密码</string>
    <string name="pay_pwd_input">请输入支付密码</string>
    <string name="pay_pwd_input_again">请再次输入支付密码</string>
    <string name="pay_approve_warn">\t\t温馨提示：为保证提现安全，输入的姓名需要和支付宝实名认证姓名一致，确保姓名和支付宝无误后再提交。</string>
    <string name="pay_balance_warn">您还没有设置支付密码，请设置完成后再进行余额支付。</string>
    <string name="wallet_warn">您还没有设置支付密码，设置后可以更安全的管理自己的钱包</string>
    <string name="wallet_id">您还未实名认证，为了资金安全，请实名认证后再进行提现操作</string>
    <string name="pay_pwd_error">支付密码错误</string>
    <string name="notify_release">您的订单已经被接单</string>
    <string name="notify_accept">恭喜您，成功接单</string>
    <string name="user_details">详细资料</string>
    <string name="send_msg">发消息</string>
    <string name="check_msg">查看消息</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="copied">已复制到粘贴板</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
</resources>