<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/name"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:hint="@string/id_name"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDividerLight"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/zfb"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_zfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:hint="@string/zfb_input"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/pay_approve_warn"
        android:textColor="@color/red"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_submit_height"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/button_gray"
        android:enabled="false"
        android:text="@string/approve"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>