<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/pwd_original"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd_original"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/pwd_original_hint"
            android:inputType="textPassword"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorDividerLight"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/pwd_new"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/register_pwd"
            android:inputType="textPassword"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorDividerLight"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/pwd_new_ok"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd_new_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/register_pwd_ok"
            android:inputType="textPassword"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/register_pwd_warn"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_submit_height"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/button_gray"
        android:enabled="false"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>