<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/zfb"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_zfb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorDividerLight"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/money_withdraw_amount"
            android:textColor="@color/textPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/money_withdraw_amount_hint"
            android:textColor="@color/textSecondary"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/money_withdraw_warn"
        android:textColor="@color/orange"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_submit_height"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_selector"
        android:text="@string/money_withdraw"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>