<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/pay_pwd_input"
        android:textColor="@color/textPrimary"
        android:textSize="16sp" />

    <com.wills.help.widget.PayPwdEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="@dimen/activity_horizontal_margin"></com.wills.help.widget.PayPwdEditText>

    <TextView
        android:id="@+id/tv_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/register_pwd_warn"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_submit_height"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@color/button_gray"
        android:enabled="false"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone" />
</LinearLayout>