<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/item_selector"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/setting_account_phone"
        android:textColor="@color/textPrimary"
        android:textSize="14sp"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorDividerLight"></View>


    <TextView
        android:id="@+id/tv_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/setting_account_pwd"
        android:textColor="@color/textPrimary"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorDividerLight"></View>

    <RelativeLayout
        android:id="@+id/rl_pay_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_selector"
            android:text="@string/setting_pay_pwd"
            android:textColor="@color/textPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_pay_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/setting_set_pay_pwd"
            android:textColor="@color/textSecondary"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>